Refactor index.html for better user experience
Updated welcome message and improved HTML structure.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             document.getElementById("bienvenida").innerHTML = "Modo invitado";
         }
         else {
-            document.getElementById("bienvenida").innerHTML = "Bienvenida/o " + nombre + ", qué deseas hacer hoy?";
+            document.getElementById("bienvenida").innerHTML = "Te damos la bienvenida, " + nombre + ", ¿qué deseas hacer hoy?";
         }
         function setName(){
             let nombre = document.getElementById("nombre").value;
@@ -64,4 +64,5 @@
     </script>
 </body>
 </html>
+
 
