Add media query for responsive design
Added media query for responsive font size on small screens.

--- a/index.html
+++ b/index.html
@@ -30,11 +30,15 @@
             box-shadow: 7px 7px 15px #101010;
             background-color: white;
             margin: 20px;
-            width: 300px;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
+        }
+        @media screen and (max-width: 600px) {
+            body{
+                font-size: 80px;
+            }
         }
     </style>
 <title>DID</title>
@@ -64,5 +68,6 @@
     </script>
 </body>
 </html>
+
 
 
