Add manifest link to index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         justify-content: center;
     }
 </style>
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <h1>Compatible con chrome</h1>
@@ -35,3 +36,4 @@
     </script>
 </body>
 </html>
+
