--- a/index.html
+++ b/index.html
@@ -15,25 +15,24 @@
 <body>
     <h1>Compatible con chrome</h1>
     <h2>DIDapp</h2>
-    <button id="installButton">Instalar</button>
+    <button id="installButton" onclick="instalar()">Instalar</button>
     <script>
         let deferredPrompt;
+        const installButton = document.getElementById('installButton');
         window.addEventListener('beforeinstallprompt', (e) => {
-        e.preventDefault(); 
-        deferredPrompt = e; 
+            e.preventDefault();
+            deferredPrompt = e;
         });
         function instalar() {
-            deferredPrompt.prompt();
-            const installButton = document.getElementById('installButton');
-            installButton.innerText = "Solicitando...";
-            deferredPrompt.userChoice.then((choiceResult) => {
-            if (choiceResult.outcome === 'accepted') {
-                installButton.innerText = "Instalando...";
-            } else {
-                installButton.innerText = "Error";
+            if (deferredPrompt) {
+                deferredPrompt.prompt();
+                deferredPrompt.userChoice.then((choiceResult) => {
+                    if (choiceResult.outcome === 'accepted') {
+                        installButton.style.display = 'none';
+                    }
+                });
             }
         }
     </script>
 </body>
 </html>
-
