Revamp index.html with improved styles and functionality
Enhanced the UI and functionality of the DIDapp installation page. Added styles, improved button behavior, and included a description alert.

--- a/index.html
+++ b/index.html
@@ -2,21 +2,48 @@
 <head>
 <title>Instalar DIDapp</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 <style>
     body{
         display: flex;
         flex-direction: column;
-        align-content: center;
+        align-items: center;
         justify-content: center;
+        font-family: "Open Sans";
+        background-image: linear-gradient(blue, #f0f);
+    }
+    button{
+        border-radius: 20px;
+        border: none;
+        background-color: #f0f;
+        font-size: 40px;
+        border: 4px solid #f0f;
+    }
+    button:hover{
+        border: 4px solid #f0f;
+        background-color: #fff;
+    }
+    div{
+        border-radius: 20px;
+        box-shadow: 7px 7px 15px #101010;
+        background-color: #fff;
     }
 </style>
     <link rel="manifest" href="manifest.json">
 </head>
-<body>
-    <h1>Compatible con chrome</h1>
-    <h2>DIDapp</h2>
-    <button id="installButton" onclick="instalar()">Instalar</button>
+<body><div>
+    <h1>DIDapp</h1>
+    <p><a onclick="descripcion()" style="text-decoration: underline;">Descripción</a></p>
+    <button id="installButton" onclick="instalar()">Instalar</button></div>
     <script>
+        userAgent = navigator.userAgent;
+        if (userAgent.includes('Chrome')) {
+            installButton.innerText = 'Instalar';
+        }
+        else {
+            installButton.disabled = true;
+            installButton.innerText = 'No compatible, solo chrome';
+        }
         let deferredPrompt;
         const installButton = document.getElementById('installButton');
         window.addEventListener('beforeinstallprompt', (e) => {
@@ -24,14 +51,25 @@
             deferredPrompt = e;
         });
         function instalar() {
+            installButton.innerText = 'Instalando...';
+            installButton.disabled = true;
             if (deferredPrompt) {
                 deferredPrompt.prompt();
                 deferredPrompt.userChoice.then((choiceResult) => {
                     if (choiceResult.outcome === 'accepted') {
-                        installButton.style.display = 'none';
+                        installButton.innerText = 'Instalado';
                     }
+                    else {
+                        installButton.disabled = false;
+                        installButton.innerText = 'Error, intentalo de nuevo';
+                        setInterval(installButton.innerText = "Instalar", 5);
+                    }
+                    deferredPrompt = null;
                 });
             }
+        }
+        function descripcion() {
+            alert("Esta app sirve para acceder a tus servicios DID favoritos desde una app")
         }
     </script>
 </body>
