Implement redirect to app.html for standalone mode
Added functionality to redirect to app.html if in standalone mode.

--- a/index.html
+++ b/index.html
@@ -72,5 +72,13 @@
             alert("Esta app sirve para acceder a tus servicios DID favoritos desde una app")
         }
     </script>
+    <script>
+        function abrirapp() {
+            return window.matchMedia('(display-mode: standalone)').matches
+        }
+        if (abrirapp()) {
+            window.location.href = "app.html";
+        }
+    </script>
 </body>
 </html>
