--- a/app.html
+++ b/app.html
@@ -42,6 +42,7 @@
         }
     </style>
 <title>DID</title>
+    <link rel="manifest" href="manifest.html">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
@@ -67,6 +68,7 @@
     </script>
 </body>
 </html>
+
 
 
 
