--- a/app.html
+++ b/app.html
@@ -35,9 +35,9 @@
             align-items: center;
             justify-content: center;
         }
-        @media screen and (max-width: 600px) {
+        @media screen and (min-width: 600px) {
             body{
-                font-size: 80px;
+                font-size: 45px;
             }
         }
     </style>
@@ -68,6 +68,7 @@
     </script>
 </body>
 </html>
+
 
 
 
