--- a/app.html
+++ b/app.html
@@ -35,7 +35,7 @@
             align-items: center;
             justify-content: center;
         }
-        @media screen and (min-width: 600px) {
+        @media screen and (max-width: 800px) {
             body{
                 font-size: 45px;
             }
@@ -68,6 +68,7 @@
     </script>
 </body>
 </html>
+
 
 
 
