--- a/app.html
+++ b/app.html
@@ -36,7 +36,7 @@
             justify-content: center;
         }
         @media screen and (max-width: 800px) {
-            body{
+            body, button, input{
                 font-size: 45px;
             }
         }
@@ -68,6 +68,7 @@
     </script>
 </body>
 </html>
+
 
 
 
