Enhance responsive design and styling in app.html
Updated media queries for responsive design and improved styling.

--- a/app.html
+++ b/app.html
@@ -61,11 +61,42 @@
             justify-content: center;
             animation: inicio 1s;
         }
-        @media screen and (max-width: 700px) {
-            body, button, input{
-                font-size: 45px;
-            }
+        @media (max-width: 600px) {
+    body {
+        font-size: 1.1em;
+        line-height: 1.6;
+        padding: 10px;
+    }
+    div {
+        width: 100%;
+        margin: 10px 0;
+        padding: 10px;
+        box-sizing: border-box;
+    }
+    input,textarea{
+        width: 100%;
+        max-width: 100%;
+        font-size: 1em;
+        padding: 12px;
+        margin-top: 8px;
+        margin-bottom: 8px;
+        box-sizing: border-box;
+        border-radius: 20px;
+        overflow: hidden;
+    }
+    #mensaje {
+        font-size: 0.9em;
+        padding: 10px;
+    }
+    button {
+        min-height: 48px;
+        margin-top: 15px;
+    }
+    textarea {
+        min-height: 150px;
+        resize: none;
         }
+    }
     </style>
 <title>DID</title>
     <link rel="manifest" href="manifest.html">
