Add DIDsync button to app.html
Added a new button for DIDsync to the main page.

--- a/app.html
+++ b/app.html
@@ -109,7 +109,9 @@
     <h2 id="bienvenida"></h2>
     <button onclick="window.open('https://did-y-sus-servicios-digitales.github.io/DIDquiz/')">DIDquiz</button>
     <button onclick="window.open('https://did-y-sus-servicios-digitales.github.io/DID-for-teachers/')">DID para profesores</button>
-    <button onclick="window.open('https://did-y-sus-servicios-digitales.github.io/Search/')">DIDweb</button></div>
+    <button onclick="window.open('https://did-y-sus-servicios-digitales.github.io/Search/')">DIDweb</button>
+    <button onclick="window.open('https://yutencurso.github.io/Links/cuenta.html')">DIDsync</button>
+    </div>
     <script>
         let nombre = localStorage.getItem("nombre");
         if (nombre == null) {
@@ -125,3 +127,4 @@
     </script>
 </body>
 </html>
+
