Enhance installation process with appinstalled event
Added event listener for app installation completion.

--- a/index.html
+++ b/index.html
@@ -85,9 +85,13 @@
         }
         mediaQuery.addEventListener('change', handleDisplayMode);
         handleDisplayMode(mediaQuery);
+        window.addEventListener('appinstalled', function(){
+            installButton.innerText = "abrir";
+        });
     </script>
 </body>
 </html>
+
 
 
 
