--- a/settings app.html
+++ b/settings app.html
@@ -104,12 +104,7 @@
 <link rel="manifest" href="manifest.html">
 </head>
 <body>
-    <div>
-        <button onclick="volver()">Volver</button>
-        <p>Cambiar perfil</p>
-        <input type="text" id="nombre" placeholder="Escribe tu nombre">
-        <button onclick="setName()">Guardar</button>
-    </div>
+    <div><button onclick="volver()">Volver</button><p>Cambiar perfil</p><input type="text" id="nombre" placeholder="Escribe tu nombre"><button onclick="setName()">Guardar</button></div>
     <script>
         function setName(){
             let nombre = document.getElementById("nombre").value;
