Fix HTML encoding issues in app.html

--- a/app.html
+++ b/app.html
@@ -73,10 +73,9 @@
         left: 0px;
         z-index: 1000;
         backdrop-filter: blur(50px);
-        max-width: 0.8cm;
+        width: 0.8cm;
         border: none;
-        background-image: linear-gradient(45deg, #f00, #f0f);
-        min-height: 0.8cm;
+        height: 0.8cm;
     }
     @media (max-width: 600px) {
         body {
@@ -152,3 +151,4 @@
     </script>
 </body>
 </html>
+
