--- a/app.html
+++ b/app.html
@@ -24,7 +24,7 @@
         left: auto;
         right: auto;
         width: 150px;
-        height: 150pc;
+        height: 150px;
         animation: logo 2s;
     }
     @keyframes logo {
