--- a/app.html
+++ b/app.html
@@ -26,6 +26,9 @@
         width: 150px;
         height: 150px;
         animation: logo 2s;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
     }
     @keyframes logo {
         0%{
