--- a/app.html
+++ b/app.html
@@ -29,6 +29,7 @@
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
+        z-index: 1111111;
     }
     @keyframes logo {
         0%{
