--- a/app.html
+++ b/app.html
@@ -167,7 +167,7 @@
 </head>
 <body>
     <button class="menu" onclick="abrirMenu()">☰</button>
-    <div id="menu" class="listaMenu">
+    <div id="menu" class="listaMenu" style="display: none;">
         <h2>Menú</h2>
         <a href="settings app.html">Ajustes</a>
     </div>
