--- a/app.html
+++ b/app.html
@@ -171,10 +171,10 @@
         <h2>Menú</h2>
         <a href="settings app.html">Ajustes</a>
     </div>
-    <div class="logo" style="display: none;"></div>
-    <div style="display: none;" id="contenedor">
+    <div class="logo"></div>
+    <div id="contenedor" style="visibility: hidden;">
     <h2 id="bienvenida"></h2>
-    <button onclick="window.open('https://did-y-sus-servicios-digitales.github.io/DIDquiz/')">DIDquiz</button>
+    <button onclick="window.open('https://did-y-sus-servicios-digitales.github.io/DIDquiz/')">DIDquiz</button> 
     <button onclick="window.open('https://did-y-sus-servicios-digitales.github.io/DID-for-teachers/')">DID para profesores</button>
     <button onclick="window.open('https://did-y-sus-servicios-digitales.github.io/Search/')">DIDweb</button>
     <button onclick="window.open('https://yutencurso.github.io/Links/cuenta.html')">DIDsync</button>
@@ -195,14 +195,15 @@
                 menu.style.display = "none";
             }
         }
-        const logo = document.getElementsByClassName("logo");
-        logo.addEventListener('animationend', function(){
+        const logo = document.querySelector(".logo");
+        logo.addEventListener('animationend', () => {
             logo.style.display = "none";
         });
         const contenedores = document.getElementById("contenedor");
-        contenedores.addEventListener('animationstart', function(){
+        contenedores.addEventListener('animationstart', () => {
+            contenedores.style.visibility = "visible";
             contenedores.style.display = "flex";
-        })
+        });
     </script>
 </body>
 </html>
