--- a/app.html
+++ b/app.html
@@ -30,6 +30,8 @@
         background-position: center;
         background-repeat: no-repeat;
         z-index: 1111111;
+        border-radius: 34px;
+        box-shadow: none;
     }
     @keyframes logo {
         0%{
@@ -58,7 +60,7 @@
             font-size: 16px;
         }
         50%{
-            font-size: 20px;
+            font-size: 18px;
         }
         100%{
             font-size: 16px;
@@ -79,7 +81,7 @@
         margin: 15px;
         width: 200px;
         animation: boton 0.7s;
-        animation-delay: 3.3s;
+        animation-delay: 3.15s;
     }
     button:hover{
         background-color: #f0f;
