Update index.html to include seasonal manifest
Added conditional manifest link based on the current month.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,20 @@
         background-color: #fff;
     }
 </style>
-    <link rel="manifest" href="manifest.json">
+    <script>
+  const mesActual = new Date().getMonth(); // 0 = Enero, 11 = Diciembre
+  const link = document.createElement('link');
+  link.rel = 'manifest';
+
+  // Si es Diciembre (11), usa el de navidad. Si no, el normal.
+  if (mesActual === 11) {
+    link.href = '/manifest-navidad.json';
+  } else {
+    link.href = '/manifest-normal.json';
+  }
+
+  document.head.appendChild(link);
+</script>
 </head>
 <body><div>
     <h1>DIDapp</h1>
@@ -79,6 +92,7 @@
     </script>
 </body>
 </html>
+
 
 
 
