--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   if (mesActual === 11) {
     link.href = '/manifest-navidad.json';
   } else {
-    link.href = '/manifest-normal.json';
+    link.href = '/manifest.json';
   }
 
   document.head.appendChild(link);
@@ -92,6 +92,7 @@
     </script>
 </body>
 </html>
+
 
 
 
