--- a/app.html
+++ b/app.html
@@ -163,20 +163,7 @@
     }
     </style>
 <title>DID</title>
-    <script>
-  const mesActual = new Date().getMonth(); // 0 = Enero, 11 = Diciembre
-  const link = document.createElement('link');
-  link.rel = 'manifest';
-
-  // Si es Diciembre (11), usa el de navidad. Si no, el normal.
-  if (mesActual === 11) {
-    link.href = '/manifest-navidad.json';
-  } else {
-    link.href = '/manifest.json';
-  }
-
-  document.head.appendChild(link);
-</script>
+    <link rel="manifest" href="manifest-n.json">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
@@ -222,4 +209,5 @@
     </script>
 </body>
 </html>
+
 
