--- a/app.html
+++ b/app.html
@@ -163,7 +163,7 @@
     }
     </style>
 <title>DID</title>
-    <link rel="manifest" href="manifest-n.json">
+    <link rel="manifest" href="manifest.json">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
@@ -209,5 +209,6 @@
     </script>
 </body>
 </html>
+
 
 
