--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         background-color: #fff;
     }
 </style>
-    <link rel="manifest" href="manifest-n.json">
+    <link rel="manifest" href="manifest.json">
 </head>
 <body><div>
     <h1>DIDapp</h1>
@@ -79,6 +79,7 @@
     </script>
 </body>
 </html>
+
 
 
 
