--- a/settings app.html
+++ b/settings app.html
@@ -101,7 +101,7 @@
 </style>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="manifest" href="manifest-n.json">
+<link rel="manifest" href="manifest.json">
 </head>
 <body>
     <div><button onclick="volver()">Volver</button><p>Cambiar perfil</p><input type="text" id="nombre" placeholder="Escribe tu nombre"><button onclick="setName()">Guardar</button></div>
@@ -117,5 +117,6 @@
 </body>
 
 </html>
+
 
 
